# furries

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  furries.cpp  generator.cpp  schema.sql  sentence.cpp  sentence.h
